# scapix

project/cmake/: CMakeLists.txt
project/cmake/modules/: scapix.cmake
